fix 2.3.0 errors
timestamp error, view error
